tests/errors/frontend/syntax/arity.fpcore
(FPCore (x)
 (if (< x 0) 0))
